--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,4 +3,5 @@
   <a *ngFor="let hero of heroes" routerLink="/detail/{{hero.id}}">
     {{hero.heroName}}
   </a>
+  <app-hero-search></app-hero-search>
 </div>
